Fixes for z-index and min-width on card - have noted on PR

--- a/nebula-components/components/_flyout.scss
+++ b/nebula-components/components/_flyout.scss
@@ -6,6 +6,7 @@
 
   .#{$nb-namespace}c-flyout.is-open > .#{$nb-namespace}c-flyout__content {
     transform: scale(1);
+    z-index: 3;
   }
 
   .#{$nb-namespace}c-flyout__content {
