--- a/nebula-components/components/_navbar.scss
+++ b/nebula-components/components/_navbar.scss
@@ -13,7 +13,7 @@ $nb-navbar-collapsed-width: 350px !default;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 4;
   } @else {
     position: relative;
   }
