--- a/nebula-components/settings/components/_card.scss
+++ b/nebula-components/settings/components/_card.scss
@@ -1,11 +1,11 @@
 // BASE
+$nb-card-min-width: 160px !default;
 $nb-card-background: $nb-color-white !default;
 $nb-card-padding: $nb-spacing-unit !default;
 $nb-card-box-shadow: 1px 1px 5px rgba($nb-color-black, 0.15) !default;
 
 // STATUS
 $nb-card-status-border-width: $nb-spacing-unit-half !default;
-
 $nb-card-status-color-success: $nb-color-success !default;
 $nb-card-status-color-info: $nb-color-info !default;
 $nb-card-status-color-warning: $nb-color-warning !default;
